# IONet

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  docker-compose.yml
IONet/: .cproject  .project
IONet/source/: IONet.cpp  IONet.h  IONetPage.cpp  IONetPage.h  IONetVar.cpp  IONetVar.h
docker/: Dockerfile
include/ionet/codec/: DecodedPacket.h  Decoder.h
include/ionet/core/: ByteBuffer.h  Endian.h  Types.h
include/ionet/schema/: Field.h  Packet.h  Schema.h  SchemaBuilder.h  SchemaLoader.h  SchemaParser.h  SchemaSource.h
schemas/: example_telemetry.json  example_telemetry.yaml
scripts/: build.sh
src/codec/: DecodedPacket.cpp  Decoder.cpp
src/core/: ByteBuffer.cpp
src/schema/: JsonSchemaParser.cpp  Schema.cpp  SchemaLoader.cpp  SchemaParserBase.cpp  SchemaSource.cpp  YamlSchemaParser.cpp
tests/: CMakeLists.txt  test_bytebuffer.cpp  test_debug.cpp  test_decoder.cpp  test_endian.cpp  test_schema.cpp  test_schema_loader.cpp
